@@ -326,6 +326,9 @@
 			return $this;
 		}
 		
+		/**
+		 * @return HttpUrl
+		 */
 		public function getUrl()
 		{
 			return $this->url;
